--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@ body {
     margin: 0;
     overflow: hidden;
     height: 100vh;
+    background-color: black !important;
     
 }
 
@@ -14,6 +15,8 @@ body {
     font-size: 16px;
     font-weight: 200;
     color: #222222;
+    background-color: black;
+    
   }
   
 .font-size-10 {
